Update nav items to mocks, update cards towards mocks.

--- a/frontend/src/pages/enabledApplications/EnabledApplications.scss
+++ b/frontend/src/pages/enabledApplications/EnabledApplications.scss
@@ -12,14 +12,16 @@
     }
   }
 
-  &__card {
-    &__header-brand {
-      height: 50px;
-    }
+  &__gallery {
+    .odh-card {
+      .pf-c-card__header {
+        padding-right: 0;
+      }
 
-    &__footer {
-      display: flex;
-      justify-content: space-between;
+      .pf-c-card__title {
+        display: flex;
+        align-items: center;
+      }
     }
   }
 }
