--- a/frontend/src/pages/ApplicationsPage.scss
+++ b/frontend/src/pages/ApplicationsPage.scss
@@ -8,4 +8,18 @@
     text-align: left;
     white-space: pre;
   }
+  &__body {
+    display: flex;
+  }
+  &__content {
+    flex: 1;
+  }
+  &__drawer {
+    background-color: var(--pf-global--BackgroundColor--light-100);
+    box-shadow: var(--pf-c-drawer--m-expanded__panel--BoxShadow);
+    width: 0;
+    &.m-open {
+      width: 400px;
+    }
+  }
 }
