--- a/frontend/src/components/OdhCard.scss
+++ b/frontend/src/components/OdhCard.scss
@@ -34,14 +34,45 @@
 
   &__partner-badge {
     background-color: var(--pf-global--BackgroundColor--light-300);
-    border: 1px solid var(--pf-global--BorderColor--200);
+    border-color: var(--pf-global--BorderColor--200);
+    border-style: solid;
+    border-width: 1px;
     border-radius: var(--pf-global--spacer--md);
     font-size: var(--pf-global--FontSize--xs);
     margin-bottom: var(--pf-global--spacer--sm);
     padding: 0 var(--pf-global--spacer--sm);
+
     &.m-warning {
       background-color: var(--pf-global--palette--red-50);
       border-color: var(--pf-global--palette--red-100);
+    }
+
+    &.m-hidden {
+      visibility: hidden;
+    }
+
+    &.odh-m-doc {
+      background-color: var(--pf-global--BackgroundColor--light-100);
+      border-color: var(--pf-global--BackgroundColor--light-300);
+
+      &.odh-m-documentation {
+        color: var(--pf-global--palette--orange-500);
+      }
+
+      &.odh-m-how-do-i {
+        border-color: var(--pf-global--BackgroundColor--light-300);
+        color: var(--pf-global--palette--purple-500);
+      }
+
+      &.odh-m-tutorial {
+        border-color: var(--pf-global--BackgroundColor--light-300);
+        color: var(--pf-global--palette--green-500);
+      }
+
+      &.odh-m-quick-start {
+        border-color: var(--pf-global--BackgroundColor--light-300);
+        color: var(--pf-global--palette--light-blue-500);
+      }
     }
   }
 
@@ -67,6 +98,9 @@
 
     &__link {
       padding: 0;
+      > svg {
+        margin-left: var(--pf-global--spacer--xs);
+      }
       &.m-hidden {
         visibility: hidden;
       }
