Fixes per review

--- a/frontend/src/app/App.scss
+++ b/frontend/src/app/App.scss
@@ -2,15 +2,16 @@ html, body, #root {
   height: 100%;
 }
 
-body {
-  background-color: lightblue;
-}
-
-.odh-apps__display-error {
-  white-space: pre-wrap;
-}
-
 .odh-dashboard {
+  &__error-body {
+    text-align: left;
+    white-space: pre;
+  }
+
+  &__display-error {
+    white-space: pre-wrap;
+  }
+
   // PF Overrides
   .pf-c-page__header {
     .pf-c-brand {
@@ -30,13 +31,16 @@ body {
     color: initial;
     background-color: initial;
   }
-}
 
-// PF Overrides
-@media (min-width: 768px) {
-  .pf-c-page {
-    grid-template-columns: max-content 1fr;
-    grid-template-areas: "header header" "nav main";
+  // PF Overrides
+  &.pf-c-page {
+    // TODO: Using the PF var doesn't work for some reason.
+    // @media (min-width: var(--pf-global--breakpoint--md)) {
+    @media (min-width: 768px) {
+      grid-template-columns: max-content 1fr;
+      grid-template-areas: "header header" "nav main";
+    }
   }
 }
+
 
