Update copy text
Renamed 'how do i' to 'how to'
Updated category types
Removed mock apps (out of date)
Updated mast head logo
styling fixes for getting started markdown

--- a/frontend/src/components/MarkdownView.scss
+++ b/frontend/src/components/MarkdownView.scss
@@ -21,4 +21,10 @@
     border-bottom: 1px solid var(--pf-global--BorderColor--100);
     vertical-align: top;
   }
+  ul {
+    list-style: initial;
+  }
+  li {
+    margin-left: var(--pf-global--spacer--lg);
+  }
 }
