--- a/frontend/src/components/OdhCard.scss
+++ b/frontend/src/components/OdhCard.scss
@@ -13,6 +13,10 @@
     }
   }
 
+  &__doc-title.pf-c-card__title {
+    padding-bottom: 0;
+  }
+
   &__header-brand {
     display: flex;
     max-height: 50px;
@@ -44,6 +48,7 @@
     border-width: 1px;
     border-radius: var(--pf-global--spacer--md);
     font-size: var(--pf-global--FontSize--xs);
+    font-weight: var(--pf-global--FontWeight--normal);
     margin-bottom: var(--pf-global--spacer--sm);
     padding: 0 var(--pf-global--spacer--sm);
 
@@ -57,34 +62,70 @@
     }
 
     &.odh-m-doc {
-      background-color: var(--pf-global--BackgroundColor--light-100);
       border-color: var(--pf-global--BackgroundColor--light-300);
+      display: flex;
+      align-items: center;
 
+      > svg {
+        margin-right: var(--pf-global--spacer--xs);
+      }
+      &.m-hidden {
+        display: none;
+      }
       &.odh-m-documentation {
-        color: var(--pf-global--palette--orange-500);
+        background-color: var(--pf-global--palette--gold-50);
+        border-color: var(--pf-global--palette--orange-100);
+        color: var(--pf-global--palette--gold-700);
       }
 
       &.odh-m-how-to {
-        border-color: var(--pf-global--BackgroundColor--light-300);
-        color: var(--pf-global--palette--purple-500);
+        background-color: var(--pf-global--palette--black-150);
+        border-color: var(--pf-global--BorderColor--100);
+        color: var(--pf-global--Color--100);
       }
 
       &.odh-m-tutorial {
-        border-color: var(--pf-global--BackgroundColor--light-300);
-        color: var(--pf-global--palette--green-500);
+        background-color: var(--pf-global--palette--cyan-50);
+        border-color: var(--pf-global--palette--cyan-100);
+        color: var(--pf-global--default-color--300);
       }
 
       &.odh-m-quick-start {
-        border-color: var(--pf-global--BackgroundColor--light-300);
-        color: var(--pf-global--palette--light-blue-500);
+        background-color: var(--pf-global--palette--green-50);
+        border-color: var(--pf-global--palette--green-100);
+        color: var(--pf-global--success-color--200);
+      }
+
+      &.odh-m-in-progress {
+        background-color: var(--pf-global--palette--purple-50);
+        border-color: var(--pf-global--palette--purple-100);
+        color: var(--pf-global--palette--purple-700);
+        > svg {
+          color: var(--pf-global--palette--purple-500);
+        }
+      }
+
+      &.odh-m-complete {
+        background-color: var(--pf-global--BackgroundColor--100);
+        border-color: var(--pf-global--palette--purple-100);
+        color: var(--pf-global--palette--green-500);
+      }
+
+      &.odh-m-duration {
+        background-color: var(--pf-global--BackgroundColor--100);
+        border-color: var(--pf-global--BorderColor--100);
+        color: var(--pf-global--Color--100);
       }
     }
   }
 
   &__doc-badges {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
+    margin-top: var(--pf-global--spacer--sm);
+    .odh-card__partner-badge:not(:last-of-type) {
+      margin-right: var(--pf-global--spacer--xs);
+    }
   }
 
   &__coming-soon {
