Show card for current quick start as selected and scroll into view

--- a/frontend/src/components/OdhCard.scss
+++ b/frontend/src/components/OdhCard.scss
@@ -13,6 +13,10 @@
     }
   }
 
+  &.odh-tourable-card {
+    cursor: default !important;
+  }
+
   &__doc-title.pf-c-card__title {
     padding-bottom: 0;
   }
