Updates to microcopy and favicon

--- a/frontend/src/app/App.scss
+++ b/frontend/src/app/App.scss
@@ -12,8 +12,10 @@ html, body, #root {
     white-space: pre-wrap;
   }
 
-  &__user-icon {
-    font-size: var(--pf-global--FontSize--xl);
+  &__external-link {
+    > svg {
+      margin-left: var(--pf-global--spacer--xs);
+    }
   }
 
   // PF Overrides
