--- a/frontend/src/components/OdhCard.scss
+++ b/frontend/src/components/OdhCard.scss
@@ -156,6 +156,9 @@
   &__footer {
     display: flex;
     justify-content: space-between;
+    &.m-right-justified {
+      justify-content: flex-end;
+    }
 
     &__link {
       padding: 0;
