--- a/frontend/src/components/OdhListItem.scss
+++ b/frontend/src/components/OdhListItem.scss
@@ -1,4 +1,4 @@
-.odh-card {
+.odh-list-item {
   &.m-disabled {
     background-color: var(--pf-global--BackgroundColor--light-200);
     position: relative;
@@ -12,15 +12,37 @@
       background-color: var(--pf-global--disabled-color--200);
     }
   }
-
-  &.odh-tourable-card {
-    cursor: default !important;
+  &__favorite {
+    &.odh-dashboard__favorite {
+      margin-top: -20px;
+    }
   }
-
-  &__doc-title.pf-c-card__title {
-    padding-bottom: 0;
+  &__doc-text {
+    color: var(--pf-global--Color--100);
+    font-size: var(--pf-global--FontSize--sm);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
-
+  &__doc-title {
+    color: var(--pf-global--Color--100);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  &__doc-description {
+    color: var(--pf-global--Color--200);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  &__link {
+    font-size: var(--pf-global--FontSize--sm) !important;
+    > svg {
+      font-size: var(--pf-global--FontSize--xs) !important;
+      margin-left: var(--pf-global--spacer--xs);
+    }
+  }
   &__header-brand {
     display: flex;
     height: 50px;
@@ -55,6 +77,7 @@
     font-weight: var(--pf-global--FontWeight--normal);
     margin-bottom: var(--pf-global--spacer--sm);
     padding: 0 var(--pf-global--spacer--sm);
+    width: fit-content;
 
     &.m-warning {
       background-color: var(--pf-global--palette--red-50);
