--- a/frontend/src/pages/exploreApplication/ExploreApplications.scss
+++ b/frontend/src/pages/exploreApplication/ExploreApplications.scss
@@ -1,9 +1,7 @@
 .odh-explore-apps {
   &__body {
-    height: 100%;
-    .pf-c-page__main-section {
-      min-height: 100%;
-    }
+    display: flex;
+    flex-direction: column;
     &.m-side-panel-open {
       .odh-dashboard__page-content {
         border-right: 0;
