Update Quick start button text on Enabled page (#76)

--- a/frontend/src/components/OdhCard.scss
+++ b/frontend/src/components/OdhCard.scss
@@ -136,6 +136,10 @@
       &.m-hidden {
         visibility: hidden;
       }
+      &.m-disabled {
+        pointer-events: none;
+        color: var(--pf-global--disabled-color--100);
+      }
     }
   }
 }
