--- a/frontend/src/app/App.scss
+++ b/frontend/src/app/App.scss
@@ -112,6 +112,18 @@ html, body, #root {
       grid-template-areas: "header header" "nav main";
     }
   }
+
+  .pf-c-app-launcher {
+    font-size: var(--pf-global--FontSize--sm);
+  }
+  .pf-c-app-launcher__group-title {
+    font-size: 13px;
+  }
+
+  .pf-c-app-launcher__menu-item-external-icon {
+    opacity: 1;
+    color: var(--pf-global--icon--Color--light);
+  }
 }
 
 
