Fix to quick start scrolling (#85)

--- a/frontend/src/app/App.scss
+++ b/frontend/src/app/App.scss
@@ -66,7 +66,12 @@ html, body, #root {
       }
     }
   }
-
+  .pf-c-page__main {
+    height: 100%;
+  }
+  .pf-c-drawer__content {
+    overflow-y: auto;
+  }
   .pf-c-page__main-section {
     .pf-l-gallery {
       --pf-l-gallery--GridTemplateColumns--max-on-xl: 330px;
