Update contrast for the un-favorited favorite icon. (#87)

--- a/frontend/src/app/App.scss
+++ b/frontend/src/app/App.scss
@@ -47,11 +47,8 @@ html, body, #root {
   &__favorite {
     cursor: pointer;
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     &__outer {
-      fill: var(--pf-global--disabled-color--200);
+      fill: var(--pf-global--disabled-color--100);
       .m-is-favorite & {
         fill: var(--pf-global--palette--gold-200);
       }
@@ -59,8 +56,10 @@ html, body, #root {
     &__inner {
       fill: var(--pf-global--BackgroundColor--100);
       position: absolute;
-      width: calc(1em - 2px);
-      height: calc(1em - 2px);
+      top: 5px;
+      left: 2px;
+      width: calc(1em - 4px);
+      height: calc(1em - 4px);
       .m-is-favorite & {
         fill: var(--pf-global--palette--gold-200);
       }
